# rbkairos_bringup

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  gripper_controllers.yaml  joint_limits_gazebo.yaml  moveit_gazebo_controllers.yaml  nav2_params.yaml  robot_config.yaml  slam_toolbox_params.yaml  tasks.yaml
config/rviz/: moveit_gazebo.rviz  rbkairos.rviz  rbkairos_full.rviz
launch/: gazebo_moveit.launch.py  nav2.launch.py  rbkairos_complete.launch.py  rbkairos_lll_test.launch.py  rbkairos_sim.launch.py  slam.launch.py
maps/: .gitkeep  demo_world.pgm  demo_world.yaml  mtc_test_world.pgm  mtc_test_world.yaml
scripts/: add_test_object.py  save_map.sh
urdf/: rbkairos_plus_with_robotiq.urdf.xacro
worlds/: mtc_test.world
