<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rbkairos_bringup</name>
  <version>0.0.1</version>
  <description>Unified bringup package for RB-Kairos+ mobile manipulator</description>
  <maintainer email="prabiee@3laws.io">Pedram Rabiee</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robotnik_gazebo_ignition</exec_depend>
  <exec_depend>robotnik_description</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>lll_moveit</exec_depend>
  <exec_depend>lll_nav2</exec_depend>
  <exec_depend>lll_mtc</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>